feat(database): Integrate PostgreSQL as storage layer

--- a/BukenTrainerPortal/appsettings.json
+++ b/BukenTrainerPortal/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "PostgreSQLConnection": "Host=localhost;Port=5432;Database=trainer_portal_db;Username=postgres;Password=postgres;"
+  },
   "AllowedHosts": "*"
 }
